# filedb-rs

./: Cargo.toml
filedb/: Cargo.toml  build.rs
filedb-uuid/: Cargo.toml
filedb-uuid/src/: lib.rs
filedb/schema/: file_schema.capnp
filedb/src/: file_types.rs  filedb.rs  lib.rs  type_uuid.rs
foobar/: Cargo.toml
foobar/src/: main.rs
