[package]
name = "filedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
flate2 = "1.0.27"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.47"
bincode = "2.0.0-rc.3"
capnp = "0.17"
filedb-uuid = { path = "../filedb-uuid" }

[build-dependencies]
capnpc = "0.17"
